--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://vanessagomesdev:13AJMikNLKxG3KOa@listatarefas.xygi5.mongodb.net/
+MONGODB_URI=mongodb+srv://vanessagomesdev:13AJMikNLKxG3KOa@listatarefas.xygi5.mongodb.net/todo-lit
 PORT=3000
 
